--- a/fileupload.html
+++ b/fileupload.html
@@ -1,24 +1,33 @@
 <head>
-   <title>File Upload Demo 2</title>
+   <title>Meteor File Upload</title>
 </head>
 
 <body>
    <div class="container">
       <h1>File Uploads</h1>
       {{>uploadForm}}
-      <h2>File Listing</h2>
       {{>fileList}}
    </div>
+   <footer>
+      <div class="container">
+         <p>Refer to Git repo: <a href="https://github.com/Artform/meteor-file-upload">https://github.com/Artform/meteor-file-upload</a></p>
+      </div>
+   </footer>
 </body>
 
 <template name="uploadForm">
+   <h2>Upload Form</h2>
    <form>
       {{> upload_bootstrap multiple=true callbacks=myCallbacks formData=someStuff }}
    </form>
 </template>
 
 <template name="fileList">
-   {{#if uploads}}
+   <h2>File Listing</h2>
+   <p class="alert alert-info">
+      A total of {{uploadCount}} files have been uploaded
+   </p>
+   {{#if uploadCount}}
    <table class="table table-striped table-hover">
       <thead>
          <tr>
@@ -33,12 +42,13 @@
             <td>{{name}}</td>
             <td><a target="_blank" href="/upload{{path}}">/upload{{path}}</a></td>
             <td>
-               <button class="deleteFileButton">delete</button>
+               <button class="deleteFileButton btn btn-danger" title="Delete {{name}}">X</button>
             </td>
          </tr>
          {{/each}}
       </tbody>
    </table>
+
    {{else}}
    <p class="alert alert-warning">No files have been uploaded yet.</p>
    {{/if}}
